# simplemem-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.cuda  PR_SUMMARY.md  README.md  docker-compose.yml  overrides.cpu.txt  pyproject.toml  requirements.txt  run.py
.github/: copilot-instructions.md
.github/workflows/: docker-build.yml
app/: __init__.py  cli.py  config.py  main.py  models.py  storage.py
tests/: conftest.py  test_delete_memory.py  test_dialogues_and_query.py  test_retrieve_endpoint.py
