[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simplemem-api"
version = "0.1.0"
description = "FastAPI-based REST API service for SimpleMem memory management"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.3",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "simplemem>=0.1.0",
    "lancedb>=0.4.3",
    "python-multipart>=0.0.6",
    "pylance",
]

[project.scripts]
simplemem-api = "app.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "httpx>=0.25.0",
]

[tool.setuptools]
packages = ["app"]
